# SpaceGraph

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/agent/src/: config.rs
crates/spacegraph-agent/: Cargo.toml
crates/spacegraph-agent/src/: config.rs  main.rs  path_policy.rs  server.rs  snapshot.rs  watch_fs.rs  watch_proc.rs
crates/spacegraph-core/: Cargo.toml
crates/spacegraph-core/src/: lib.rs
crates/spacegraph-viewer/: Cargo.toml
crates/spacegraph-viewer/src/: main.rs  net.rs  state.rs
crates/spacegraph-viewer/src/app/: events.rs  mod.rs  resources.rs
crates/spacegraph-viewer/src/graph/: explain.rs  gc.rs  layout.rs  metrics.rs  mod.rs  model.rs  state.rs  timeline.rs  tree.rs
crates/spacegraph-viewer/src/net/: mod.rs  protocol.rs  uds.rs
crates/spacegraph-viewer/src/render/: camera.rs  mod.rs  spatial.rs  timeline.rs
crates/spacegraph-viewer/src/ui/: help.rs  hud.rs  layout.rs  mod.rs  panel.rs  search.rs  settings_agents.rs  settings_paths.rs  shortcuts.rs  tooltips.rs
crates/spacegraph-viewer/src/util/: agent_command.rs  config.rs  ids.rs  mod.rs
docs/: ACCEPTANCE.md  ARCH_VIEWER.md  Implementation-Blueprint.md  ROADMAP_v0.2.0.md
