[package]
name = "spacegraph-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
spacegraph-core = { path = "../spacegraph-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }

serde_json = "1"
anyhow = "1"

procfs = "0.16"
notify = "6"
libc = "0.2"
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
