[package]
name = "spacegraph-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
spacegraph-core = { path = "../spacegraph-core" }

anyhow = "1"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }

crossbeam-channel = "0.5"
smallvec = "1"

bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "x11",
    "tonemapping_luts",
] }
bevy_egui = "0.28"

[features]
audio = ["bevy/bevy_audio"]

[dev-dependencies]
tempfile = "3"
